--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	    <div class="movie-details">
+        <img src="movie-poster.jpg" alt="Movie Poster" class="moviePic"><br>
+        <p class="movieDetail">In a world where code meets cinema, "The CSS Chronicles" unfolds—a tale of selectors, animations, and responsive design. Will it flexbox its way to success or float into obscurity?</p>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
